--- a/src/content/graphos/delivery/schema-linter.mdx
+++ b/src/content/graphos/delivery/schema-linter.mdx
@@ -3,6 +3,8 @@ title: Schema linting
 description: With GraphOS
 ---
 
+> ⚠️ Schema linting is currently in **private preview**.
+
 GraphOS provides **schema linting** to help you enforce formatting conventions and other GraphQL best practices with every proposed change to your graph's schema.
 
 <img
@@ -15,14 +17,16 @@ GraphOS provides **schema linting** to help you enforce formatting conventions a
 - **If you set up [schema checks](./schema-checks/) for your graph,** linting runs as a separate check type alongside build and operation checks.
 - You can also perform [one-off linting with the Rover CLI](#one-off-linting-with-the-rover-cli).
 
-> **Note:** Currently, GraphOS linting only analyzes parts of your modified schema that differ from your _published_ schema. It does _not_ flag any _existing_ violations.
+> **Note:** Currently, GraphOS linting only analyzes parts of your modified schema that differ from your _published_ schema. It does not flag any existing violations.
 
 ## Configuring the linter
 
 The GraphOS schema linter uses a [predefined collection of rules](./linter-rules/) to identify issues with proposed schema changes.
 
 - You can configure how each variant of your graph treats violations of each linter rule.
+    - ⚠️ **Variant-level configuration is not available during the private preview period!**
 - You can also define **graph-wide linter defaults** for any variants you _don't_ configure individually.
+    - Only these are available during the private preview period.
 
 **Navigate to your linter's configuration:**
 
@@ -41,6 +45,8 @@ The GraphOS schema linter uses a [predefined collection of rules](./linter-rules
 
     **To configure just the current variant,** remain on the **This Variant** tab.
 
+      - ⚠️ **Variant-level configuration is not available during the private preview period!** All variants use graph-wide linter defaults.
+
 This page organizes linter options into the following categories:
 
 - **General Linter Configuration** provides high-level options, including disabling the linter entirely.
@@ -49,7 +55,9 @@ This page organizes linter options into the following categories:
   - Using a _non_-approved value for `name` raises the `TAG_DIRECTIVE_USES_UNKNOWN_NAME` violation.
 - **Linter Rules** enables you to [set the severity level](#setting-severity-levels) for violations of each rule.
 
-If you're configuring a single variant, each category displays a **Use Graph Settings** toggle in the upper right. If this toggle is enabled, the variant uses whatever graph-wide defaults are set for that category.
+If you're viewing configuration for a single variant, each category displays a **Use Graph Settings** toggle in the upper right. If this toggle is enabled, the variant uses whatever graph-wide defaults are set for that category.
+
+> ⚠️ **During the private preview period,** the **Use Graph Settings** toggle is _always_ enabled for _all_ variants.
 
 ### Setting severity levels
 
@@ -60,7 +68,7 @@ The **Linter Rules** category of your linter configuration displays all predefin
     class="screenshot"
     alt="Linter configuration page in GraphOS Studio"
     width="500"
-  />
+/>
 
 Click a rule's severity to set it to any of the following:
 
@@ -71,9 +79,93 @@ Click a rule's severity to set it to any of the following:
 
 ## Running the linter
 
-### Via schema checks
+Schema linting runs automatically as part of your graph's [schema checks](#linting-via-schema-checks). You can also perform [one-off linting](#one-off-linting) of local schema changes via the Rover CLI.
+
+### Linting via schema checks
+
+If you set up [schema checks](./schema-checks) for your graph, schema linting automatically runs as a separate check type alongside build and operation checks. You can view the results of _all_ check types from your graph's **Checks** page in Studio:
+
+<img
+    src="../img/linter-check-results.jpg"
+    class="screenshot"
+    alt="Checks page in Studio showing all check types"
+    width="500"
+/>
+
+> **For the best experience running linter checks, install v0.15 or later of the Rover CLI.** Earlier versions of Rover can't correctly output the results of linter checks (but they do correctly exit with a nonzero code if a linter check fails).
 
 ### One-off linting
+
+> ⚠️ **One-off linting requires v0.15 or later of the Rover CLI.** [Install the latest version.](/rover/getting-started)
+
+The Rover CLI provides `subgraph lint` and `graph lint` commands for running the GraphOS linter against your local schema changes.
+
+- Use `subgraph lint` for subgraphs in a supergraph.
+- Use `graph lint` for [monographs](../graphs/#monographs) (not recommended).
+
+```bash title="Example command"
+rover subgraph lint --name products --schema ./products-schema.graphql my-graph@my-variant
+```
+
+The argument `my-graph@my-variant` in the example above is a **graph ref** that specifies the ID of the graph you're comparing your schema changes against, along with which [variant](../graphs/#variants) you're comparing against.
+
+Command options include:
+
+<table class="field-table">
+<thead>
+<tr>
+<th>Name</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr class="required">
+<td>
+
+###### `--schema`
+
+</td>
+<td>
+
+**Required.** The path to a local `.graphql` or `.gql` file, in [SDL format](/resources/graphql-glossary/#schema-definition-language-sdl).
+
+Alternatively, you can provide `-`, in which case the command uses an SDL string piped to `stdin` instead (see [Using `stdin`](/rover/conventions#using-stdin)).
+
+</td>
+</tr>
+
+<tr class="required">
+<td>
+
+###### `--name`
+
+</td>
+
+<td>
+
+**Required** for `subgraph lint`. **Omit** for `graph lint`. The name of the published subgraph to compare schema changes against.
+
+</td>
+</tr>
+
+<tr>
+<td>
+
+###### `--ignore-existing-lint-violations`
+
+</td>
+
+<td>
+
+If provided, the linter _only_ flags violations that are present in the diff between your local schema and your published schema.
+
+By default, one-off linting flags _all_ violations in your local schema. 
+
+</td>
+</tr>
+
+</tbody>
+</table>
 
 ## Linter rules
 
