--- a/src/content/technotes/TN0016-router-resource-management.mdx
+++ b/src/content/technotes/TN0016-router-resource-management.mdx
@@ -20,10 +20,10 @@ Our general recommendation for Kubernetes is to start with these requests and li
 ```yaml
 resources:
   requests:
-    memory: '1gb'
+    memory: '1G'
     cpu: '1000m'
   limits:
-    memory: '2gb'
+    memory: '2G'
     # no CPU limit to avoid throttling
 ```
 
