--- a/src/content/basics/intro/platform.mdx
+++ b/src/content/basics/intro/platform.mdx
@@ -1,45 +1,45 @@
 ---
 title: The Apollo GraphOS platform
-description: Bring your supergraph from prototype to production
+description: Unify your infrastructure with GraphQL
 ---
 
-**Apollo GraphOS** is the platform for building, managing, and scaling a **supergraph**: a unified network of your organization's data, services, and capabilities—all composed into a single distributed API.
+**Apollo GraphOS** is the platform for building, managing, and scaling a **supergraph**: a unified network of your organization's microservices and their data sources—all composed into a single distributed API.
 
-With one query to your supergraph's **router**, an application client can fetch data from any combination of sources:
+With one query to your supergraph's **router**, an application client can fetch data from any combination of your services:
 
 ```mermaid
 flowchart LR;
   clients(Clients);
   subgraph "GraphOS";
-  router(["Router"]);
+  router(["Graph<br/>Router"]);
   end;
   subgraph "Your infrastructure";
-  subgraphA[Users<br/>subgraph];
-  subgraphB[Products<br/>subgraph];
-  dbA[(Users<br/>DB)];
-  dbB[(Products<br/>DB)];
-  router --- subgraphA & subgraphB;
+  subgraphA[Users<br/>API];
+  subgraphB[Products<br/>API];
+  dbA[( )];
+  dbB[( )];
+  router -->|Sub-query| subgraphA & subgraphB;
   subgraphA --- dbA;
   subgraphB --- dbB;
   end;
-  clients -.- router;
+  clients -.->|Query| router;
   class clients secondary;
 ```
 
-Clients query your supergraph with a powerful language called [GraphQL](./benefits/), which enables them to retrieve exactly the data they need, with no overfetching. The architecture of your supergraph is not exposed, and clients query it via a single, GraphOS-managed endpoint.
+Clients query your supergraph with a powerful language called [GraphQL](./benefits/), which enables them to retrieve _exactly_ the data they need, with no overfetching. Your supergraph's architecture is not exposed—clients send queries to a _single endpoint_ (your router), no matter what data they need.
 
-<ExpansionPanel title="See an example query and response">
+<ExpansionPanel title="See an example query and response!">
 
 <CodeColumns>
 
 ```graphql title="Example Client Query"
 # This single query fetches data
-# from both subgraphs shown above.
-query GetCurrentUserCart {
+# from both APIs shown above.
+query GetCurrentUserWishlist {
   currentUser {
     id
     name
-    cartItems {
+    wishlistedProducts {
       id
       name
       inStock
@@ -54,7 +54,7 @@ query GetCurrentUserCart {
     "currentUser": {
       "id": "abc",
       "name": "Katherine Johnson",
-      "cartItems": [
+      "wishlistedProducts": [
         {
           "id": "123",
           "name": "Coffee thermos",
@@ -79,16 +79,16 @@ The GraphOS platform provides an ever-growing collection of tools and services t
 **These features are core to GraphOS:**
 
 - [**Cloud routing.**](/graphos/routing/cloud/)
-  - GraphOS automatically provisions and hosts a router for each of your supergraphs. Clients query your router instead of individual subgraphs, which enables the router to automatically collect operation metrics that you can then visualize in Apollo Studio.
+  - GraphOS automatically provisions and hosts a router for each of your supergraphs. Clients query your router instead of your individual services (also called **subgraphs**). This enables the router to automatically collect operation metrics that you can then visualize in GraphOS Studio.
 - **The schema registry.**
-  - GraphOS tracks the GraphQL schemas for all of your individual subgraphs, and it also handles **composing** those subgraph schemas into one _supergraph_ schema for your router.
+  - GraphOS tracks the schemas for all of your GraphQL APIs, and it also handles **composing** those schemas into one _supergraph_ schema for your router.
 - **Safe schema delivery.**
-  - The [schema checks](/graphos/delivery/schema-checks/) feature of GraphOS enables you to verify whether proposed changes to a subgraph will cause an issue with _other_ subgraphs, or with any of your existing clients.
-  - Whenever you update a subgraph schema, GraphOS composes a new _supergraph_ schema for your router. If composition succeeds, your router automatically begins using its new schema.
-  - You can view the results of each [launch](/graphos/delivery/launches/) that takes place whenever you update a subgraph schema, helping you resolve any issues that might occur.
+  - The [schema checks](/graphos/delivery/schema-checks/) feature of GraphOS enables you to verify whether proposed changes to one of your services will cause an issue with _other_ services, or with any of your existing clients.
+  - Whenever you update a service's schema, GraphOS composes a new _supergraph_ schema for your router. If composition succeeds, your router automatically begins using its new schema.
+  - You can view the results of each [launch](/graphos/delivery/launches/) that takes place whenever you update a service's schema, helping you resolve any issues that might occur.
 - **An interface for every use case.**
-  - [Apollo Studio](https://studio.apollographql.com?referrer=docs-content) is the primary web interface for GraphOS. Among other capabilities, you use Studio to create your organization and its supergraphs, view [schemas](/graphos/graphs/studio-features/#the-schema-page) and [metrics](/graphos/metrics/), and test out operations in [the Explorer](/graphos/explorer/).
-  - [The Rover CLI](/rover/getting-started/) is the primary _command-line_ interface for GraphOS. Among other capabilities, you use Rover to publish subgraph schemas to the registry, run schema checks from CI, and test out your supergraph within your development environment.
+  - [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content) is the primary web interface for GraphOS. Among other capabilities, you use Studio to create your organization and its supergraphs, view [schemas](/graphos/graphs/studio-features/#the-schema-page) and [metrics](/graphos/metrics/), and test out operations in [the Explorer](/graphos/explorer/).
+  - [The Rover CLI](/rover/getting-started/) is the primary _command-line_ interface for GraphOS. Among other capabilities, you use Rover to publish schemas to the registry, run schema checks from CI, and test out your supergraph within your development environment.
   - If you want to automate your own workflows outside of Studio or Rover, you can use the official [GraphOS Platform API](/graphos/platform-api) to do so. We'll expose more GraphOS capabilities through the Platform API over time.
 
 To learn more about these and many more GraphOS features, see the [complete GraphOS documentation](/graphos/).
@@ -103,13 +103,13 @@ Every supergraph uses an open architecture called [**Apollo Federation**](/feder
 flowchart LR;
   clients(Clients);
   subgraph "GraphOS";
-  router(["Router"]);
+  router(["Graph<br/>Router"]);
   end;
   subgraph "Your infrastructure";
-  subgraphA[Users<br/>subgraph];
-  subgraphB[Products<br/>subgraph];
-  dbA[(Users<br/>DB)];
-  dbB[(Products<br/>DB)];
+  subgraphA[GraphQL API<br/>A];
+  subgraphB[GraphQL API<br/>B];
+  dbA[( )];
+  dbB[( )];
   router --- subgraphA & subgraphB;
   subgraphA --- dbA;
   subgraphB --- dbB;
@@ -118,13 +118,13 @@ flowchart LR;
   class clients secondary;
 ```
 
-* The **router**
-    * The router serves as the client-accessible entry point to your supergraph. It receives all incoming queries.
+* The **graph router**
+    * The graph router serves as the client-accessible entry point to your supergraph. It receives all incoming queries.
     * As its name suggests, the router "routes" each incoming query to the appropriate combination of **subgraphs** (see the next item). It's also responsible for combining multiple subgraph responses into a _single_ response for the client.
-    * GraphOS takes care of provisioning and hosting your supergraph's router for you! 
+    * GraphOS can take care of provisioning and hosting your supergraph's router for you! 
 * One or more **subgraphs**
-    * Each subgraph is itself a GraphQL API that's responsible for a different subset of your supergraph's available data. Clients don't query your subgraphs directly! Only the router does.
-    * Usually, each of your existing backend services acts as a different subgraph.
+    * Your GraphQL APIs each contribute a subset of your supergraph's available data, so we call them subgraphs! Clients don't query your subgraphs directly—only your router does.
+    * Usually, each of your existing microservices acts as a different subgraph.
 * Backing **data sources** (databases, REST APIs, etc.)
     * Your subgraphs use these to populate data for incoming queries.
 
@@ -134,7 +134,7 @@ The following video provides a helpful visualization of how the Apollo Federatio
 
 <YouTube youTubeId="wRExDdgs6JU" />
 
-## What are the benefits of a supergraph?
+## Why adopt a supergraph?
 
 Adopting a supergraph significantly improves the developer experience for every team (both internal and external) that interacts with your organization's data. These improvements enable developers to ship products and features more quickly, with greater confidence in their reliability and performance.
 
@@ -176,7 +176,7 @@ Each subgraph is itself a GraphQL API. Therefore, it uses a GraphQL server libra
 
 To act as a subgraph, a GraphQL server library needs to support the **Apollo Federation subgraph specification**. Fortunately, many popular libraries do! See [Federation-compatible subgraph implementations](/federation/building-supergraphs/supported-subgraphs).
 
-Feel free to use whichever server library best suits your organization. Different subgraphs can even use completely different libraries, which is helpful if your various backend services use different languages.
+Feel free to use whichever server library best suits your organization. Different subgraphs can even use completely different libraries, which is helpful if your various microservices use different languages.
 
 ## How do clients query my supergraph?
 
@@ -191,7 +191,7 @@ Apollo provides GraphQL client libraries for the following platforms:
 
 These are all customizable, open-source libraries with powerful caching and state management features. Client-side caching enables an application to locally replicate the parts of your supergraph that it cares about. The application can then query _itself_ for data if it's already present, which dramatically improves performance by eliminating redundant network requests.
 
-## How do I get started?
+## Where do I start?
 
 We have loads of helpful resources to help you start your supergraph journey:
 
@@ -199,7 +199,7 @@ We have loads of helpful resources to help you start your supergraph journey:
     - [Lift-off](https://www.apollographql.com/tutorials/lift-off-part1) (for getting started with GraphQL)
     - [Voyage](https://www.apollographql.com/tutorials/voyage-part1) (for getting started with your supergraph)
 - A quickstart for [creating your cloud supergraph with GraphOS](/graphos/quickstart/cloud/)
-    - Get started with your own GraphQL API, or try out the platform with an Apollo-hosted example supergraph.
+    - Connect your own GraphQL API, or try out the platform with Apollo-hosted example subgraphs.
 - An [example supergraph repo](https://github.com/apollographql/supergraph-demo-fed2) with a detailed README and multiple subgraph definitions
 
 Looking for additional guidance? Share a question in our [community forums](https://community.apollographql.com/) and we'll help point you in the right direction!
