--- a/src/content/shared/pq-router-configuration.mdx
+++ b/src/content/shared/pq-router-configuration.mdx
@@ -8,4 +8,4 @@ As soon as a graph has an associated PQL, you can configure router instances to 
 
 3. Deploy your updated router instances to begin using your PQL.
 
-Once your organization's PQL has registered all your clients' operations and you've ensured your client apps are only sending trusted operations, you can update your router configuration to the [safelisting security level](#safelisting).
+Once your organization's PQL has preregistered all your clients' operations and you've ensured your client apps are only sending preregistered operations, you can update your router configuration to the [safelisting security level](#safelisting).
