--- a/src/content/shared/pq-security-levels.mdx
+++ b/src/content/shared/pq-security-levels.mdx
@@ -10,9 +10,9 @@ The Apollo Router supports the following security levels, in increasing order of
 - **Safelisting with IDs only**: The router rejects any incoming operations not present in its PQL, _and_ clients _must_ execute an operation by providing its PQL-specified ID.
     - Before moving to this security level, ensure _all_ your clients execute operations by providing their PQL-specified ID.
 
-When you first adopt persisted queries, you should start with a less restrictive security such as [audit mode](#audit-mode-dry-run). You can then enable increasingly restrictive levels after your teams has updated all clients.
+When adopting persisted queries, you should start with a less restrictive security such as [audit mode](#audit-mode-dry-run). You can then enable increasingly restrictive levels after your teams have updated all clients.
 
-See below for sample YAML configurations for each level.
+See below for sample YAML configurations for each level. Refer to the [router configuration options](/router/configuration/persisted-queries#configuration-options) for option details.
 
 #### Allow operation IDs
 
@@ -48,9 +48,9 @@ For example:
 2023-08-02T11:51:59.833534Z  WARN [trace_id=5006cef73e985810eb086e5900945807] unknown operation operation_body="query ExampleQuery {\n  me {\n    id\n  }\n}\n"
 ```
 
-If your router receives a trusted operation listed in the PQL then no log message will be output.
+If your router receives an operation preregistered in the PQL, no log message will be output.
 
-You can use these router logs to audit operations sent to your router and ask client teams to [add new ones](/graphos/operations/persisted-queries#3-preregister-trusted-operations) to your PQL if necessary.
+You can use these router logs to audit operations sent to your router and ask client teams to [add new ones](/graphos/operations/persisted-queries#3-preregister-operations) to your PQL if necessary.
 
 #### Safelisting
 
@@ -69,16 +69,16 @@ apq:
   enabled: false # APQ must be turned off 
 ```
 
-> **Note:** To enable safelisting, you _must_ turn off [automatic persisted queries](/router/configuration/in-memory-caching#caching-automatic-persisted-queries-apq) (APQs). APQs let clients [register arbitrary operations at runtime](#differences-from-automatic-persisted-queries), while safelisting's intent is to restrict operations to those that have been explicitly preregistered.
+> **Note:** To enable safelisting, you _must_ turn off [automatic persisted queries](/router/configuration/in-memory-caching#caching-automatic-persisted-queries-apq) (APQs). APQs let clients [register arbitrary operations at runtime](#differences-from-automatic-persisted-queries) while safelisting restricts operations to those that have been explicitly preregistered.
 
 To execute an operation, clients can provide its PQL-specified ID _or_ full operation string.
-The router rejects unregistered operations and since `log_unknown` is true, those operations appear in your [router's logs](/router/logging).
+The router rejects unregistered operations, and since `log_unknown` is true, those operations appear in your [router's logs](/router/logging).
 
-> You can set `log_unknown` to `false` while enabling safelisting, but it's best to keep logging enabled to monitor the operations your router rejects.
+> You can set `log_unknown` to `false` when enabling safelisting, but it's best to keep logging enabled to monitor the operations your router rejects.
 
 #### Safelisting with IDs only
 
-> ⚠️ **Do not start with this configuration:** It requires _all_ your clients execute operations by providing their PQL-specified ID. If any clients still provide full operation strings, the router rejects those operations, even if they're included in the safelist.
+> ⚠️ **Do not start with this configuration:** It requires _all_ your clients to execute operations by providing their PQL-specified ID. If any clients still provide full operation strings, the router rejects those operations, even if they're included in the safelist.
 
 With the following configuration, your router allows _only_ GraphQL operations that are present in its PQL, _and_ it requires clients to provide PQL-specified IDs instead of full operation strings:
 
@@ -93,10 +93,10 @@ apq:
   enabled: false # APQ must be turned off 
 ```
 
-> **Note:** To enable safelisting, you _must_ turn off [automatic persisted queries](/router/configuration/in-memory-caching#caching-automatic-persisted-queries-apq) (APQs). APQs let clients [register arbitrary operations at runtime](#differences-from-automatic-persisted-queries), while safelisting's intent is to restrict operations to those that have been explicitly preregistered.
+> **Note:** To enable safelisting, you _must_ turn off [automatic persisted queries](/router/configuration/in-memory-caching#caching-automatic-persisted-queries-apq) (APQs). APQs let clients [register arbitrary operations at runtime](#differences-from-automatic-persisted-queries) while safelisting restricts operations to those that have been explicitly preregistered.
 
-If you want to use this security level, you should always _first_ set up [safelisting with operation strings allowed](#safelisting). ID only safelisting mode requires modifying _all_ your clients to execute operations via PQL-specified ID instead of an operation string. While making those necessary changes, you can use the less restrictive [safelisting mode](#safelisting) in your router.
+If you want to use this security level, you should always _first_ set up [safelisting with operation strings allowed](#safelisting). ID-only safelisting mode requires modifying _all_ your clients to execute operations via PQL-specified ID instead of an operation string. While making those necessary changes, you can use the less restrictive [safelisting mode](#safelisting) in your router.
 
-With `log_unknown` set to true, the router [logs](/router/logging) _all_ rejected operations, including operations that were preregistered to your PQL but used the full operation string rather than PQL-specified ID.
+With `log_unknown` set to true, the router [logs](/router/logging) _all_ rejected operations, including those preregistered to your PQL but that used the full operation string rather than the PQL-specified ID.
 
-> You can set `log_unknown` to `false` while enabling safelisting, but it's best to keep logging enabled to monitor the operations your router rejects.
+> You can set `log_unknown` to `false` when enabling safelisting, but it's best to keep logging enabled to monitor the operations your router rejects.
